[gd_scene load_steps=11 format=3 uid="uid://bsow8susscqvf"]

[ext_resource type="Script" path="res://scripts/portal.gd" id="1_36t7s"]
[ext_resource type="Shader" path="res://shaders/Portal.gdshader" id="2_u7x4l"]
[ext_resource type="Environment" uid="uid://0ja3rgp6mlci" path="res://materials/WorldEnvoirment.tres" id="3_5we1s"]
[ext_resource type="ArrayMesh" uid="uid://45a7pdtg1obi" path="res://assets/Portal.obj" id="4_68e08"]

[sub_resource type="ViewportTexture" id="ViewportTexture_y5k7a"]
viewport_path = NodePath("PortalViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gaeiv"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_u7x4l")
shader_parameter/exposure = 1.0
shader_parameter/camTexture = SubResource("ViewportTexture_y5k7a")

[sub_resource type="BoxMesh" id="BoxMesh_mmy8c"]
resource_local_to_scene = true
material = SubResource("ShaderMaterial_gaeiv")
uv2_padding = 1.0
size = Vector3(2, 3.125, 0.05)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_3a65u"]

[sub_resource type="BoxMesh" id="BoxMesh_d3l12"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ik3yv"]
size = Vector3(2.15, 3, 5)

[node name="Portal" type="Node3D" node_paths=PackedStringArray("linkedPortal")]
script = ExtResource("1_36t7s")
linkedPortal = NodePath(".")

[node name="PortalSurface" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58113, 0)
layers = 2
mesh = SubResource("BoxMesh_mmy8c")

[node name="PortalViewport" type="SubViewport" parent="."]
debug_draw = 26
use_hdr_2d = true
render_target_update_mode = 4

[node name="PortalCamera" type="Camera3D" parent="PortalViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
cull_mask = 1048573
environment = ExtResource("3_5we1s")
current = true

[node name="AncorPoints" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.77271, 0)

[node name="Ancor1" type="Node3D" parent="AncorPoints"]
transform = Transform3D(0.436126, 0, 0, 0, 0.194465, 0, 0, 0, 1, -0.998792, -1.74152, 0.125)

[node name="Ancor2" type="Node3D" parent="AncorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.02053, -1.71822, 0.125)

[node name="Ancor3" type="Node3D" parent="AncorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.952216, 1.24073, 0.125)

[node name="Ancor4" type="Node3D" parent="AncorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.990733, 1.29851, 0.125)

[node name="Ancor5" type="Node3D" parent="AncorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.981104, -1.69295, -0.125)

[node name="Ancor6" type="Node3D" parent="AncorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.01962, -1.67369, -0.125)

[node name="Ancor7" type="Node3D" parent="AncorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.952216, 1.29851, -0.125)

[node name="Ancor8" type="Node3D" parent="AncorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.952215, 1.27925, -0.125)

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_3a65u")

[node name="Frame" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
mesh = ExtResource("4_68e08")
skeleton = NodePath("../../..")

[node name="PortalLight" type="MeshInstance3D" parent="."]
transform = Transform3D(0.35, 0, 0, 0, 0.35, 0, 0, 0, 0.5, -1.29746, 2.4471, 0)
mesh = SubResource("BoxMesh_d3l12")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.606, 0)
shape = SubResource("BoxShape3D_ik3yv")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
